[workspace]

[package]
name = "linebotapp"
version = "0.1.0"
edition = "2021"
publish = false
default-run = "linebotapp-cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
loco-rs = { version = "0.13.2", default-features = false }

[dependencies]
loco-rs = { workspace = true , features = ["cli"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.33.0", default-features = false, features = [
  "rt-multi-thread",
] }
async-trait = "0.1.74"
axum = {version = "0.7.5", features = ["multipart"]}
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }
line-bot-messaging-api = "0.1.7"
url = "2.5.4"

[[bin]]
name = "linebotapp-cli"
path = "src/bin/main.rs"
required-features = []

[dev-dependencies]
loco-rs = { workspace = true, features = ["testing"] }
serial_test = "3.1.1"
rstest = "0.21.0"
insta = { version = "1.34.0", features = ["redactions", "yaml", "filters"] }
